CASMUAS-7 Add /admin/config DELETE and fix API volume_descriptions
